# vscode-picotool-template

./: CMakeLists.txt  README.md  ReadMe.md
main/: CMakeLists.txt  main.c
